provarAnt/00D1b0000000d5bEAA/objects/ATDSA_FOUR__Category__c.object
<CustomObject>
    <fields>
        <fullName>ATDSA_FOUR__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__GalleryAttachmentId__c</fullName>
        <description>This field was added to store the Gallery attachement ID during the upload of gallery image from configurator.</description>
        <label>Gallery Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Is_Parent_Category__c</fullName>
        <formula>IF( ISBLANK(ATDSA_FOUR__Parent_Category__c), 1, 0)</formula>
        <label>Is Parent Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Is_Top_Level__c</fullName>
        <formula>IF( ISBLANK(ATDSA_FOUR__Parent_Category__c), 1, 0)</formula>
        <label>Is Top Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Order__c</fullName>
        <description>Order of Sub-Categories</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>ATDSA_FOUR__Category__c</referenceTo>
        <relationshipLabel>Sub Categories</relationshipLabel>
        <relationshipName>SubCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Todays_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Todays Special</label>
        <type>Checkbox</type>
    </fields>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>